erDiagram

    STORES {
        uuid id PK
        uuid owner_user_id "FK → auth.users.id (Unique)"
        text name
        text city
        text state
        text logo_url
        text brand_positioning
        text main_segment
        text tone_of_voice
        text address
        text neighborhood
        text phone
        text whatsapp
        text instagram
        text primary_color
        text secondary_color
        timestamptz created_at
        timestamptz updated_at
    }

    CAMPAIGNS {
        uuid id PK
        uuid store_id FK
        uuid weekly_plan_item_id FK "Vínculo com Plano"
        text origin "manual | plan"
        text content_type "product | service | info"
        text campaign_type "post | reels | both"
        text product_name
        numeric price
        text price_label
        text audience
        text objective
        text product_positioning
        text status "Global: draft | ready | approved"
        text post_status "none | draft | ready | approved"
        text reels_status "none | draft | ready | approved"
        text headline
        text body_text
        text cta
        text image_url
        text product_image_url
        text ai_text
        text ai_caption
        text ai_hashtags
        text ai_cta
        timestamptz ai_generated_at
        text reels_hook
        text reels_script
        jsonb reels_shotlist
        jsonb reels_on_screen_text
        text reels_audio_suggestion
        int reels_duration_seconds
        text reels_caption
        text reels_cta
        text reels_hashtags
        timestamptz reels_generated_at
        timestamptz created_at
        timestamptz updated_at
    }

    WEEKLY_PLANS {
        uuid id PK
        uuid store_id FK
        date week_start "Must be Monday"
        text status "draft | approved"
        jsonb strategy
        timestamptz created_at
        timestamptz updated_at
    }

    WEEKLY_PLAN_ITEMS {
        uuid id PK
        uuid plan_id FK
        int day_of_week "1-7"
        text content_type "post | reels | both"
        text theme
        text recommended_time
        text status "draft | ready | approved"
        jsonb brief
        timestamptz created_at
    }

    BETA_FEEDBACKS {
        uuid id PK
        uuid user_id FK
        uuid store_id FK
        int rating "1-5"
        text comment
        text category
        jsonb metadata
        timestamptz created_at
    }

    CAMPAIGN_METRICS {
        uuid id PK
        uuid campaign_id FK
        text metric_type "usefulness | regeneration"
        text value_text
        numeric value_num
        jsonb metadata
        timestamptz created_at
    }

    STORES ||--o{ CAMPAIGNS : "store_id"
    STORES ||--o{ WEEKLY_PLANS : "store_id"
    WEEKLY_PLANS ||--o{ WEEKLY_PLAN_ITEMS : "plan_id"
    WEEKLY_PLAN_ITEMS ||--o| CAMPAIGNS : "weekly_plan_item_id (Nova)"
    STORES ||--o{ BETA_FEEDBACKS : "store_id"
    CAMPAIGNS ||--o{ CAMPAIGN_METRICS : "campaign_id"